# docs/swagger.json
@@ -1004,7 +1004,7 @@
                 }
             }
         },
-        "/rank/get_rank_list": {
+        "/rank/get_distance_rank": {
             "get": {
                 "security": [
                     {
@@ -1017,7 +1017,54 @@
                 "tags": [
                     "Rank"
                 ],
-                "summary": "获取排行榜",
+                "summary": "获取今日距离排行榜",
+                "parameters": [
+                    {
+                        "description": "获取距禽排行榜",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/apprequest.GetRankListRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "获取距离排行榜",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/response.PageResponse"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
+        "/rank/get_rank_list": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Rank"
+                ],
+                "summary": "获取步数排行榜",
                 "parameters": [
                     {
                         "description": "获取排行榜",
