# router/app/rank.go
@@ -7,6 +7,7 @@ type RankRouter struct{}
 func (r RankRouter) InitRankRouter(Router *gin.RouterGroup) {
 	rankRouter := Router.Group("rank")
 	{
-		rankRouter.GET("get_rank_list", rankApi.GetRankList)
+		rankRouter.POST("get_rank_list", rankApi.GetRankList)
+		rankRouter.POST("get_distance_rank", rankApi.GetDistanceRank)
 	}
 }
